temp tresh commit need write a class loader

--- a/server/src/main/resources/server.configuration.properties
+++ b/server/src/main/resources/server.configuration.properties
@@ -1,1 +1,5 @@
 port=8080
+server.host=172.18.192.177
+path.to.scheme=configurationSchem.xsd
+manifest.name=structure.xml
+default.unpack.dir=tempdir
