--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>server</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.vanya</groupId>
+            <artifactId>api</artifactId>
+            <version>0.1-0</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
