Add new module store. Add jar loader. Add function update page in runtime

--- a/server/src/main/resources/server.configuration.properties
+++ b/server/src/main/resources/server.configuration.properties
@@ -3,3 +3,5 @@ server.host=172.18.192.177
 path.to.scheme=configurationSchem.xsd
 manifest.name=structure.xml
 default.unpack.dir=tempdir
+dirrectory.for.site.pages=pages
+count.thread.for.client=10
