--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>api</module>
         <module>site</module>
         <module>server</module>
+        <module>store</module>
     </modules>
 
     <dependencyManagement>
@@ -30,6 +31,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
