add classloader add worck site add session

--- a/server/src/main/resources/server.configuration.properties
+++ b/server/src/main/resources/server.configuration.properties
@@ -2,6 +2,6 @@ port=8080
 server.host=172.18.192.177
 path.to.scheme=configurationSchem.xsd
 manifest.name=structure.xml
-default.unpack.dir=tempdir
-dirrectory.for.site.pages=pages
+default.unpack.dir=classes
+directory.for.site.pages=pages
 count.thread.for.client=10
