It adds the ability to save and load state before and after turning off the server

--- a/server/src/main/resources/server.configuration.properties
+++ b/server/src/main/resources/server.configuration.properties
@@ -2,6 +2,9 @@ port=8080
 server.host=172.18.192.177
 path.to.scheme=configurationSchem.xsd
 manifest.name=structure.xml
-default.unpack.dir=classes
+default.unpack.dir=tempdir
 directory.for.site.pages=pages
 count.thread.for.client=10
+directory.for.store.class=classes
+#file containing the relationship between the URL and the file containing the classes to handle the URL
+class.manager.file=manifest.txt
