--- a/server/pom.xml
+++ b/server/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>api</artifactId>
             <version>0.1-0</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <version>1.2.17</version>
+            <artifactId>log4j</artifactId>
+        </dependency>
     </dependencies>
 
 
